# lib/api/metadata_rpc_api.pb.go
@@ -88,6 +88,7 @@ func (m *GetGlobalMetadataDetailResponse) GetInformation() *types.MetadataDetail
 
 type GetGlobalMetadataDetailListRequest struct {
 	LastUpdated          uint64   `protobuf:"varint,1,opt,name=last_updated,json=lastUpdated,proto3" json:"last_updated,omitempty"`
+	PageSize             uint64   `protobuf:"varint,2,opt,name=page_size,json=pageSize,proto3" json:"page_size,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -129,6 +130,13 @@ var xxx_messageInfo_GetGlobalMetadataDetailListRequest proto.InternalMessageInfo
 func (m *GetGlobalMetadataDetailListRequest) GetLastUpdated() uint64 {
 	if m != nil {
 		return m.LastUpdated
+	}
+	return 0
+}
+
+func (m *GetGlobalMetadataDetailListRequest) GetPageSize() uint64 {
+	if m != nil {
+		return m.PageSize
 	}
 	return 0
 }
@@ -263,6 +271,7 @@ func (m *GetLocalMetadataDetailResponse) GetIsInternal() bool {
 
 type GetLocalMetadataDetailListRequest struct {
 	LastUpdated          uint64   `protobuf:"varint,1,opt,name=last_updated,json=lastUpdated,proto3" json:"last_updated,omitempty"`
+	PageSize             uint64   `protobuf:"varint,2,opt,name=page_size,json=pageSize,proto3" json:"page_size,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -304,6 +313,13 @@ var xxx_messageInfo_GetLocalMetadataDetailListRequest proto.InternalMessageInfo
 func (m *GetLocalMetadataDetailListRequest) GetLastUpdated() uint64 {
 	if m != nil {
 		return m.LastUpdated
+	}
+	return 0
+}
+
+func (m *GetLocalMetadataDetailListRequest) GetPageSize() uint64 {
+	if m != nil {
+		return m.PageSize
 	}
 	return 0
 }
@@ -669,54 +685,55 @@ func init() {
 func init() { proto.RegisterFile("lib/api/metadata_rpc_api.proto", fileDescriptor_ac620a9256b640e4) }
 
 var fileDescriptor_ac620a9256b640e4 = []byte{
-	// 743 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xcc, 0x56, 0xc1, 0x6e, 0xd3, 0x4c,
-	0x10, 0xd6, 0x36, 0x7f, 0xfb, 0xb7, 0x9b, 0x42, 0xd1, 0x4a, 0x2d, 0xa9, 0x5b, 0x9c, 0xd4, 0x95,
-	0xda, 0x34, 0x08, 0x1b, 0xca, 0xa1, 0xa8, 0x47, 0x40, 0x8d, 0x22, 0x8a, 0x00, 0x97, 0x5e, 0xb8,
-	0x44, 0x6b, 0x7b, 0x9b, 0xae, 0x6a, 0x7b, 0x8d, 0x77, 0xdd, 0xaa, 0x70, 0xe3, 0xcc, 0x8d, 0x63,
-	0x85, 0xe0, 0x01, 0x78, 0x10, 0x8e, 0x48, 0xbc, 0x00, 0xaa, 0x38, 0xf0, 0x18, 0xc8, 0x6b, 0x3b,
-	0x72, 0x5c, 0x27, 0x4d, 0x6e, 0xdc, 0xe2, 0xd9, 0x99, 0xef, 0xfb, 0x66, 0xbe, 0xd9, 0x55, 0xa0,
-	0xea, 0x52, 0xcb, 0xc0, 0x01, 0x35, 0x3c, 0x22, 0xb0, 0x83, 0x05, 0xee, 0x86, 0x81, 0xdd, 0xc5,
-	0x01, 0xd5, 0x83, 0x90, 0x09, 0x86, 0x66, 0xc2, 0xc0, 0xc6, 0x01, 0x55, 0x16, 0xe3, 0x3c, 0x9b,
-	0x79, 0x1e, 0xf3, 0x0d, 0x0b, 0x73, 0x92, 0x1c, 0x2b, 0xb5, 0x38, 0x2c, 0xce, 0x03, 0xc2, 0xfb,
-	0x00, 0xe9, 0xc9, 0x6a, 0x8f, 0xb1, 0x9e, 0x4b, 0x24, 0x36, 0xf6, 0x7d, 0x26, 0xb0, 0xa0, 0xcc,
-	0xe7, 0xe9, 0xe9, 0x4a, 0x7a, 0x2a, 0xbf, 0xac, 0xe8, 0xc8, 0x20, 0x5e, 0x20, 0xce, 0x93, 0x43,
-	0xed, 0x23, 0x80, 0xf5, 0x36, 0x11, 0x6d, 0x97, 0x59, 0xd8, 0x7d, 0x9e, 0xc2, 0x3e, 0x25, 0x02,
-	0x53, 0xd7, 0x24, 0x3c, 0x60, 0x3e, 0x27, 0xe8, 0x3e, 0x9c, 0x66, 0x67, 0x3e, 0x09, 0x6b, 0xa0,
-	0x01, 0x9a, 0xd5, 0x6d, 0x45, 0xef, 0x4b, 0xb6, 0xa2, 0x23, 0xfd, 0x45, 0xd8, 0xc3, 0x3e, 0x7d,
-	0x27, 0x29, 0xcd, 0x24, 0x11, 0xed, 0xc0, 0x2a, 0xf5, 0x8f, 0x58, 0xe8, 0xc9, 0x68, 0x6d, 0x4a,
-	0xd6, 0x2d, 0xea, 0x52, 0xbc, 0x5e, 0x60, 0xc9, 0x67, 0x6a, 0x6d, 0xa8, 0x0d, 0x51, 0xb3, 0x4f,
-	0xb9, 0x30, 0xc9, 0xdb, 0x88, 0x70, 0x81, 0xd6, 0xe0, 0xbc, 0x8b, 0xb9, 0xe8, 0x46, 0x81, 0x83,
-	0x05, 0x71, 0xa4, 0xae, 0xff, 0xcc, 0x6a, 0x1c, 0x3b, 0x4c, 0x42, 0xda, 0x67, 0x00, 0xd7, 0x47,
-	0x22, 0xa5, 0xbd, 0x2d, 0xc1, 0x19, 0x2e, 0xb0, 0x88, 0xb8, 0x04, 0x99, 0x36, 0xd3, 0x2f, 0x74,
-	0x0b, 0x56, 0x3c, 0xde, 0x93, 0xca, 0xe7, 0xcc, 0xf8, 0x27, 0xda, 0x87, 0x37, 0xfa, 0xbe, 0xb9,
-	0x94, 0x8b, 0x5a, 0xa5, 0x51, 0x69, 0x56, 0xb7, 0x37, 0xf5, 0xc4, 0x35, 0xfd, 0x9a, 0x29, 0x9a,
-	0xf3, 0x59, 0x75, 0xcc, 0xaf, 0x7d, 0x03, 0x50, 0x6d, 0x13, 0xb1, 0xcf, 0xec, 0x7f, 0x60, 0xec,
-	0xa8, 0x0e, 0xab, 0x94, 0x77, 0xa9, 0x2f, 0x48, 0xe8, 0x63, 0xb7, 0x56, 0x69, 0x80, 0xe6, 0xac,
-	0x09, 0x29, 0xef, 0xa4, 0x11, 0x6d, 0x0f, 0xae, 0x95, 0xab, 0x9d, 0xd0, 0x96, 0x0b, 0x20, 0x0d,
-	0x1e, 0x0a, 0x34, 0xb1, 0x2b, 0xcf, 0xca, 0x5d, 0xd9, 0xc8, 0xb9, 0x32, 0x62, 0xc6, 0x05, 0x53,
-	0x5e, 0xc1, 0xa5, 0x97, 0x91, 0xe5, 0x52, 0x7e, 0x9c, 0xa5, 0x67, 0xad, 0x15, 0x26, 0x0b, 0xc6,
-	0x5e, 0x68, 0x07, 0xde, 0xbe, 0x02, 0x39, 0x71, 0x93, 0x75, 0x58, 0xed, 0x37, 0x49, 0x1d, 0x69,
-	0xcf, 0x9c, 0x09, 0xb3, 0x50, 0xc7, 0xd1, 0x1e, 0xc1, 0x45, 0x93, 0x9c, 0xb2, 0x13, 0x52, 0xd4,
-	0x5d, 0xa8, 0x04, 0x57, 0x2a, 0x1d, 0xd8, 0x68, 0x13, 0x91, 0x95, 0x1d, 0x72, 0xe2, 0xbc, 0xc6,
-	0xfc, 0xa4, 0xe3, 0xe4, 0x7d, 0x8d, 0xb7, 0xc3, 0x21, 0xbe, 0xa0, 0xe2, 0x3c, 0x07, 0x92, 0x85,
-	0x3a, 0x4e, 0x91, 0x65, 0xea, 0x0a, 0xcb, 0xb1, 0x5c, 0x9f, 0x61, 0x2c, 0x13, 0xcf, 0x63, 0x19,
-	0xce, 0x0a, 0xcc, 0x4f, 0xba, 0xd4, 0xe1, 0xd2, 0xef, 0x39, 0xf3, 0x7f, 0x21, 0xf1, 0xf8, 0xf6,
-	0x9f, 0x69, 0xb8, 0x90, 0xf1, 0x1c, 0x90, 0xf0, 0x94, 0xda, 0x04, 0x7d, 0x01, 0x70, 0x65, 0xc4,
-	0x5b, 0x80, 0x5a, 0xd7, 0x5c, 0xe1, 0xdc, 0x2c, 0x94, 0xbb, 0x63, 0xe5, 0x26, 0x1d, 0x69, 0x9b,
-	0x1f, 0x7e, 0xfe, 0xfe, 0x34, 0xb5, 0x86, 0xea, 0x86, 0x8d, 0xc3, 0x90, 0x92, 0xd0, 0x38, 0x7d,
-	0xd0, 0x7f, 0xbb, 0x8d, 0x9e, 0x2c, 0x97, 0x0a, 0x2e, 0x00, 0x54, 0x86, 0x5f, 0x0b, 0xb4, 0x35,
-	0x7a, 0x9b, 0xf3, 0xfa, 0x5a, 0xe3, 0xa4, 0xa6, 0xf2, 0x36, 0xa4, 0xbc, 0x06, 0x52, 0x4b, 0xe5,
-	0xb9, 0x71, 0xb5, 0xa4, 0x7f, 0x0f, 0x17, 0x0a, 0x3b, 0x8c, 0xd4, 0x8c, 0xa6, 0xfc, 0xbe, 0x28,
-	0xf5, 0xa1, 0xe7, 0x83, 0xa3, 0xd1, 0x56, 0x4b, 0xb9, 0x83, 0xa4, 0x6a, 0x17, 0xb4, 0x50, 0x04,
-	0x6f, 0x0e, 0xae, 0x36, 0xba, 0x93, 0x61, 0x97, 0xae, 0xbc, 0xb2, 0x3a, 0xf8, 0x4e, 0x1e, 0x50,
-	0x2f, 0x70, 0x49, 0xb1, 0x67, 0x6d, 0xa5, 0x94, 0x37, 0x94, 0x88, 0x31, 0xed, 0x57, 0x00, 0x97,
-	0x87, 0xae, 0x2c, 0x6a, 0xe6, 0xa6, 0x3c, 0xf2, 0xee, 0x28, 0x5b, 0x63, 0x64, 0xa6, 0xd2, 0x74,
-	0x29, 0xad, 0xa9, 0xad, 0x97, 0x4a, 0x8b, 0x06, 0x8a, 0x76, 0x41, 0xeb, 0xf1, 0xce, 0xf7, 0x4b,
-	0x15, 0xfc, 0xb8, 0x54, 0xc1, 0xaf, 0x4b, 0x15, 0xbc, 0xd9, 0xea, 0x51, 0x71, 0x1c, 0x59, 0xba,
-	0xcd, 0x3c, 0xc3, 0x64, 0x9c, 0x08, 0x81, 0xf7, 0x5c, 0x76, 0x66, 0x3c, 0x49, 0xb0, 0xee, 0xb5,
-	0x99, 0x91, 0xfe, 0xfd, 0xb0, 0x66, 0xe4, 0x70, 0x1e, 0xfe, 0x0d, 0x00, 0x00, 0xff, 0xff, 0xfa,
-	0x79, 0x2e, 0xaf, 0x90, 0x08, 0x00, 0x00,
+	// 761 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xcc, 0x56, 0xcd, 0x6e, 0xd3, 0x4c,
+	0x14, 0xd5, 0x34, 0x6d, 0xbf, 0x66, 0xd2, 0x8f, 0xa2, 0x91, 0x5a, 0x52, 0xa7, 0x24, 0xa9, 0x2b,
+	0xb5, 0x69, 0x10, 0x36, 0x94, 0x45, 0x51, 0x97, 0x80, 0x88, 0x22, 0x8a, 0x00, 0x97, 0x6e, 0xd8,
+	0x44, 0x63, 0x7b, 0x9a, 0x8e, 0x6a, 0x7b, 0x8c, 0x67, 0xdc, 0xaa, 0x65, 0xc7, 0x9a, 0x1d, 0xcb,
+	0x0a, 0xc1, 0x03, 0xf0, 0x20, 0x2c, 0x91, 0x78, 0x01, 0x54, 0xb1, 0xe0, 0x31, 0x90, 0xc7, 0x76,
+	0xe4, 0xb8, 0x4e, 0xda, 0x48, 0x2c, 0xd8, 0xc5, 0xf7, 0xef, 0x9c, 0x7b, 0xcf, 0xbd, 0xa3, 0xc0,
+	0xba, 0x43, 0x4d, 0x1d, 0xfb, 0x54, 0x77, 0x89, 0xc0, 0x36, 0x16, 0xb8, 0x17, 0xf8, 0x56, 0x0f,
+	0xfb, 0x54, 0xf3, 0x03, 0x26, 0x18, 0x9a, 0x0d, 0x7c, 0x0b, 0xfb, 0x54, 0x59, 0x8c, 0xe2, 0x2c,
+	0xe6, 0xba, 0xcc, 0xd3, 0x4d, 0xcc, 0x49, 0xec, 0x56, 0xaa, 0x91, 0x59, 0x9c, 0xfa, 0x84, 0x0f,
+	0x0a, 0x24, 0x9e, 0x95, 0x3e, 0x63, 0x7d, 0x87, 0xc8, 0xda, 0xd8, 0xf3, 0x98, 0xc0, 0x82, 0x32,
+	0x8f, 0x27, 0xde, 0x5a, 0xe2, 0x95, 0x5f, 0x66, 0x78, 0xa0, 0x13, 0xd7, 0x17, 0xa7, 0xb1, 0x53,
+	0xfd, 0x00, 0x60, 0xa3, 0x43, 0x44, 0xc7, 0x61, 0x26, 0x76, 0x9e, 0x27, 0x65, 0x9f, 0x10, 0x81,
+	0xa9, 0x63, 0x10, 0xee, 0x33, 0x8f, 0x13, 0x74, 0x0f, 0xce, 0xb0, 0x13, 0x8f, 0x04, 0x55, 0xd0,
+	0x04, 0xad, 0xca, 0x96, 0xa2, 0x0d, 0x28, 0x9b, 0xe1, 0x81, 0xf6, 0x22, 0xe8, 0x63, 0x8f, 0x9e,
+	0x49, 0x48, 0x23, 0x0e, 0x44, 0xdb, 0xb0, 0x42, 0xbd, 0x03, 0x16, 0xb8, 0xd2, 0x5a, 0x9d, 0x92,
+	0x79, 0x8b, 0x9a, 0x24, 0xaf, 0xe5, 0x50, 0xb2, 0x91, 0xaa, 0x0d, 0xd5, 0x11, 0x6c, 0x76, 0x29,
+	0x17, 0x06, 0x79, 0x1b, 0x12, 0x2e, 0xd0, 0x2a, 0x9c, 0x77, 0x30, 0x17, 0xbd, 0xd0, 0xb7, 0xb1,
+	0x20, 0xb6, 0xe4, 0x35, 0x6d, 0x54, 0x22, 0xdb, 0x7e, 0x6c, 0x42, 0x35, 0x58, 0xf6, 0x71, 0x9f,
+	0xf4, 0x38, 0x3d, 0x23, 0x12, 0x7f, 0xda, 0x98, 0x8b, 0x0c, 0x7b, 0xf4, 0x8c, 0xa8, 0x9f, 0x00,
+	0x5c, 0x1b, 0x0b, 0x93, 0x34, 0xbe, 0x04, 0x67, 0xb9, 0xc0, 0x22, 0xe4, 0x12, 0x61, 0xc6, 0x48,
+	0xbe, 0xd0, 0x4d, 0x58, 0x72, 0x79, 0x5f, 0x96, 0x2d, 0x1b, 0xd1, 0x4f, 0xb4, 0x0b, 0xff, 0x1f,
+	0x88, 0xea, 0x50, 0x2e, 0xaa, 0xa5, 0x66, 0xa9, 0x55, 0xd9, 0xda, 0xd0, 0x62, 0x49, 0xb5, 0x2b,
+	0x46, 0x6c, 0xcc, 0xa7, 0xd9, 0x11, 0xbe, 0xfa, 0x15, 0xc0, 0x7a, 0x87, 0x88, 0x5d, 0x66, 0xfd,
+	0x03, 0x9a, 0xa0, 0x06, 0xac, 0x50, 0xde, 0xa3, 0x9e, 0x20, 0x81, 0x87, 0x9d, 0x6a, 0xa9, 0x09,
+	0x5a, 0x73, 0x06, 0xa4, 0xbc, 0x9b, 0x58, 0x54, 0x0b, 0xae, 0x16, 0xb3, 0xfd, 0x9b, 0x9a, 0x9d,
+	0x03, 0xb9, 0x1a, 0x23, 0x51, 0x26, 0x96, 0xec, 0x59, 0xb1, 0x64, 0xeb, 0x19, 0xc9, 0xc6, 0x08,
+	0x90, 0x53, 0xec, 0x15, 0x5c, 0x7a, 0x19, 0x9a, 0x0e, 0xe5, 0x87, 0x69, 0x78, 0xda, 0x77, 0x6e,
+	0xec, 0x60, 0x82, 0x53, 0xb8, 0x75, 0xa9, 0xe4, 0xc4, 0x4d, 0x36, 0x60, 0x65, 0xd0, 0x24, 0xb5,
+	0xa5, 0x76, 0x65, 0x03, 0xa6, 0xa6, 0xae, 0xad, 0x3e, 0x84, 0x8b, 0x06, 0x39, 0x66, 0x47, 0x24,
+	0xcf, 0x3b, 0x97, 0x09, 0x2e, 0x65, 0xda, 0xb0, 0xd9, 0x21, 0x22, 0x4d, 0xdb, 0xe7, 0xc4, 0x7e,
+	0x8d, 0xf9, 0x51, 0xd7, 0xce, 0x8a, 0x1e, 0xad, 0x8e, 0x4d, 0x3c, 0x41, 0xc5, 0x69, 0xa6, 0x48,
+	0x6a, 0xea, 0xda, 0x79, 0x94, 0xa9, 0x4b, 0x28, 0x87, 0x72, 0xb7, 0x46, 0xa1, 0x4c, 0x3c, 0x8f,
+	0x65, 0x38, 0x27, 0x30, 0x3f, 0xea, 0x51, 0x9b, 0x4b, 0xbd, 0xcb, 0xc6, 0x7f, 0x42, 0xd6, 0xe3,
+	0x5b, 0xbf, 0x67, 0xe0, 0x42, 0x8a, 0xb3, 0x47, 0x82, 0x63, 0x6a, 0x11, 0xf4, 0x19, 0xc0, 0xda,
+	0x98, 0x87, 0x02, 0xb5, 0xaf, 0xb8, 0xef, 0xcc, 0x2c, 0x94, 0x3b, 0xd7, 0x8a, 0x8d, 0x3b, 0x52,
+	0x37, 0xde, 0xff, 0xf8, 0xf5, 0x71, 0x6a, 0x15, 0x35, 0x74, 0x0b, 0x07, 0x01, 0x25, 0x81, 0x7e,
+	0x7c, 0x7f, 0xf0, 0xea, 0xeb, 0x7d, 0x99, 0x2e, 0x19, 0x9c, 0x03, 0xa8, 0x8c, 0x3e, 0x0b, 0xb4,
+	0x39, 0x7e, 0x9b, 0xb3, 0xfc, 0xda, 0xd7, 0x09, 0x4d, 0xe8, 0xad, 0x4b, 0x7a, 0x4d, 0x54, 0x2f,
+	0xa4, 0xe7, 0x44, 0xd9, 0x12, 0xfe, 0x1d, 0x5c, 0xc8, 0xed, 0x30, 0xaa, 0xa7, 0x30, 0xc5, 0xf7,
+	0xa2, 0x34, 0x46, 0xfa, 0x87, 0x47, 0xa3, 0xae, 0x14, 0x62, 0xfb, 0x71, 0xd6, 0x0e, 0x68, 0xa3,
+	0x10, 0xde, 0x18, 0x5e, 0x6d, 0x74, 0x3b, 0xad, 0x5d, 0xb8, 0xf2, 0xca, 0xca, 0xf0, 0x23, 0xba,
+	0x47, 0x5d, 0xdf, 0x21, 0xf9, 0x9e, 0xd5, 0x5a, 0x21, 0x6e, 0x20, 0x2b, 0x46, 0xb0, 0x5f, 0x00,
+	0x5c, 0x1e, 0xb9, 0xb2, 0xa8, 0x95, 0x99, 0xf2, 0xd8, 0xdb, 0x51, 0x36, 0xaf, 0x11, 0x99, 0x50,
+	0xd3, 0x24, 0xb5, 0x96, 0xba, 0x56, 0x48, 0x2d, 0x1c, 0x4a, 0xda, 0x01, 0xed, 0x47, 0xdb, 0xdf,
+	0x2e, 0xea, 0xe0, 0xfb, 0x45, 0x1d, 0xfc, 0xbc, 0xa8, 0x83, 0x37, 0x9b, 0x7d, 0x2a, 0x0e, 0x43,
+	0x53, 0xb3, 0x98, 0xab, 0x1b, 0x8c, 0x13, 0x21, 0xf0, 0x53, 0x87, 0x9d, 0xe8, 0x8f, 0xe3, 0x5a,
+	0x77, 0x3b, 0x4c, 0x4f, 0xfe, 0xb8, 0x98, 0xb3, 0x72, 0x38, 0x0f, 0xfe, 0x04, 0x00, 0x00, 0xff,
+	0xff, 0x44, 0x3f, 0x67, 0x43, 0xca, 0x08, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -1030,6 +1047,11 @@ func (m *GetGlobalMetadataDetailListRequest) MarshalToSizedBuffer(dAtA []byte) (
 		i -= len(m.XXX_unrecognized)
 		copy(dAtA[i:], m.XXX_unrecognized)
 	}
+	if m.PageSize != 0 {
+		i = encodeVarintMetadataRpcApi(dAtA, i, uint64(m.PageSize))
+		i--
+		dAtA[i] = 0x10
+	}
 	if m.LastUpdated != 0 {
 		i = encodeVarintMetadataRpcApi(dAtA, i, uint64(m.LastUpdated))
 		i--
@@ -1175,6 +1197,11 @@ func (m *GetLocalMetadataDetailListRequest) MarshalToSizedBuffer(dAtA []byte) (i
 	if m.XXX_unrecognized != nil {
 		i -= len(m.XXX_unrecognized)
 		copy(dAtA[i:], m.XXX_unrecognized)
+	}
+	if m.PageSize != 0 {
+		i = encodeVarintMetadataRpcApi(dAtA, i, uint64(m.PageSize))
+		i--
+		dAtA[i] = 0x10
 	}
 	if m.LastUpdated != 0 {
 		i = encodeVarintMetadataRpcApi(dAtA, i, uint64(m.LastUpdated))
@@ -1485,6 +1512,9 @@ func (m *GetGlobalMetadataDetailListRequest) Size() (n int) {
 	if m.LastUpdated != 0 {
 		n += 1 + sovMetadataRpcApi(uint64(m.LastUpdated))
 	}
+	if m.PageSize != 0 {
+		n += 1 + sovMetadataRpcApi(uint64(m.PageSize))
+	}
 	if m.XXX_unrecognized != nil {
 		n += len(m.XXX_unrecognized)
 	}
@@ -1547,6 +1577,9 @@ func (m *GetLocalMetadataDetailListRequest) Size() (n int) {
 	_ = l
 	if m.LastUpdated != 0 {
 		n += 1 + sovMetadataRpcApi(uint64(m.LastUpdated))
+	}
+	if m.PageSize != 0 {
+		n += 1 + sovMetadataRpcApi(uint64(m.PageSize))
 	}
 	if m.XXX_unrecognized != nil {
 		n += len(m.XXX_unrecognized)
@@ -1852,6 +1885,25 @@ func (m *GetGlobalMetadataDetailListRequest) Unmarshal(dAtA []byte) error {
 				b := dAtA[iNdEx]
 				iNdEx++
 				m.LastUpdated |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		case 2:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field PageSize", wireType)
+			}
+			m.PageSize = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowMetadataRpcApi
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.PageSize |= uint64(b&0x7F) << shift
 				if b < 0x80 {
 					break
 				}
@@ -2201,6 +2253,25 @@ func (m *GetLocalMetadataDetailListRequest) Unmarshal(dAtA []byte) error {
 				b := dAtA[iNdEx]
 				iNdEx++
 				m.LastUpdated |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		case 2:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field PageSize", wireType)
+			}
+			m.PageSize = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowMetadataRpcApi
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.PageSize |= uint64(b&0x7F) << shift
 				if b < 0x80 {
 					break
 				}
