# lib/api/power_rpc_api.pb.go
@@ -216,6 +216,7 @@ func (m *GetGlobalPowerDetailResponse) GetPowerId() string {
 
 type GetGlobalPowerDetailListRequest struct {
 	LastUpdated          uint64   `protobuf:"varint,1,opt,name=last_updated,json=lastUpdated,proto3" json:"last_updated,omitempty"`
+	PageSize             uint64   `protobuf:"varint,2,opt,name=page_size,json=pageSize,proto3" json:"page_size,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -257,6 +258,13 @@ var xxx_messageInfo_GetGlobalPowerDetailListRequest proto.InternalMessageInfo
 func (m *GetGlobalPowerDetailListRequest) GetLastUpdated() uint64 {
 	if m != nil {
 		return m.LastUpdated
+	}
+	return 0
+}
+
+func (m *GetGlobalPowerDetailListRequest) GetPageSize() uint64 {
+	if m != nil {
+		return m.PageSize
 	}
 	return 0
 }
@@ -399,6 +407,7 @@ func (m *GetLocalPowerDetailResponse) GetPowerId() string {
 
 type GetLocalPowerDetailListRequest struct {
 	LastUpdated          uint64   `protobuf:"varint,1,opt,name=last_updated,json=lastUpdated,proto3" json:"last_updated,omitempty"`
+	PageSize             uint64   `protobuf:"varint,2,opt,name=page_size,json=pageSize,proto3" json:"page_size,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -440,6 +449,13 @@ var xxx_messageInfo_GetLocalPowerDetailListRequest proto.InternalMessageInfo
 func (m *GetLocalPowerDetailListRequest) GetLastUpdated() uint64 {
 	if m != nil {
 		return m.LastUpdated
+	}
+	return 0
+}
+
+func (m *GetLocalPowerDetailListRequest) GetPageSize() uint64 {
+	if m != nil {
+		return m.PageSize
 	}
 	return 0
 }
@@ -685,54 +701,55 @@ func init() {
 func init() { proto.RegisterFile("lib/api/power_rpc_api.proto", fileDescriptor_e5594bc2f9a3f125) }
 
 var fileDescriptor_e5594bc2f9a3f125 = []byte{
-	// 745 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xc4, 0x56, 0x4d, 0x4f, 0xd4, 0x40,
-	0x18, 0xce, 0xb0, 0x2c, 0xca, 0x2c, 0x07, 0x33, 0x2a, 0x2c, 0xdd, 0x65, 0x85, 0x2e, 0x84, 0x0f,
-	0x43, 0xab, 0x18, 0x63, 0xc2, 0x11, 0xd0, 0x0d, 0x09, 0x51, 0x52, 0xc2, 0x45, 0x0f, 0x9b, 0x69,
-	0x3b, 0x2c, 0x03, 0x6d, 0xa7, 0x76, 0xa6, 0x10, 0x3c, 0x19, 0x13, 0x4f, 0x1e, 0x8c, 0xe1, 0xa4,
-	0x17, 0x7f, 0x87, 0xff, 0xc0, 0xa3, 0x89, 0x7f, 0xc0, 0x10, 0x7f, 0x88, 0xe9, 0x4c, 0x17, 0x5a,
-	0xb6, 0xbb, 0x66, 0x2f, 0x7a, 0xa3, 0xf3, 0x7e, 0x3c, 0xcf, 0xfb, 0x3c, 0xef, 0x0c, 0x0b, 0x6b,
-	0x1e, 0xb5, 0x4d, 0x1c, 0x52, 0x33, 0x64, 0xa7, 0x24, 0x6a, 0x47, 0xa1, 0xd3, 0xc6, 0x21, 0x35,
-	0xc2, 0x88, 0x09, 0x86, 0xc6, 0xa2, 0xd0, 0xc1, 0x21, 0xd5, 0xee, 0x26, 0x49, 0x0e, 0xf3, 0x7d,
-	0x16, 0x98, 0x36, 0xe6, 0x44, 0x85, 0x73, 0xc7, 0x2e, 0x16, 0x38, 0x3d, 0xae, 0x27, 0xc7, 0xe2,
-	0x2c, 0x24, 0xdc, 0x8c, 0x08, 0x67, 0x71, 0xe4, 0x90, 0x4c, 0x54, 0xeb, 0x02, 0x0a, 0xcc, 0x8f,
-	0xf3, 0x78, 0x5a, 0xbd, 0xc3, 0x58, 0xc7, 0x23, 0x32, 0x8c, 0x83, 0x80, 0x09, 0x2c, 0x28, 0x0b,
-	0x78, 0x1a, 0xad, 0xa5, 0x51, 0xf9, 0x65, 0xc7, 0x07, 0x26, 0xf1, 0x43, 0x71, 0xa6, 0x82, 0xfa,
-	0x5b, 0x00, 0x67, 0x5a, 0x44, 0xb4, 0x3c, 0x66, 0x63, 0x6f, 0x37, 0x99, 0x65, 0x2f, 0xf6, 0x7d,
-	0x1c, 0x9d, 0x59, 0x84, 0x87, 0x2c, 0xe0, 0x04, 0x3d, 0x80, 0x65, 0x76, 0x1a, 0x90, 0xa8, 0x0a,
-	0x66, 0xc1, 0x52, 0x65, 0x4d, 0x33, 0x2e, 0x71, 0xed, 0xf8, 0xc0, 0x78, 0x11, 0x75, 0x70, 0x40,
-	0xdf, 0x48, 0x40, 0x4b, 0x25, 0xa2, 0x55, 0x58, 0x96, 0xaa, 0x54, 0x47, 0x64, 0xc5, 0x94, 0x21,
-	0x87, 0x32, 0x64, 0xf7, 0x7d, 0x8e, 0x3b, 0x64, 0x8b, 0x08, 0x4c, 0x3d, 0x4b, 0x65, 0xe9, 0xe7,
-	0x00, 0xce, 0x15, 0x52, 0xd8, 0xa1, 0x5c, 0x5c, 0xd2, 0x98, 0x84, 0x63, 0x5c, 0x60, 0x11, 0x73,
-	0xc9, 0xa3, 0x6c, 0xa5, 0x5f, 0xe8, 0x16, 0x2c, 0xf9, 0xbc, 0x23, 0xa1, 0xc6, 0xad, 0xe4, 0x4f,
-	0xb4, 0x05, 0xa1, 0x32, 0xc5, 0xa3, 0x5c, 0x54, 0x4b, 0xb3, 0xa5, 0xa5, 0xca, 0xda, 0x82, 0xa1,
-	0x2c, 0x31, 0x06, 0xce, 0x6a, 0x8d, 0xcb, 0xc2, 0x04, 0x57, 0xff, 0x02, 0x60, 0x3d, 0x9f, 0x9c,
-	0xb2, 0xfe, 0x57, 0xba, 0xa0, 0x69, 0x78, 0x53, 0xcd, 0x41, 0xdd, 0x6a, 0x49, 0x8e, 0x77, 0x43,
-	0x7e, 0x6f, 0xbb, 0xfa, 0x16, 0xbc, 0x57, 0xc4, 0x4d, 0x09, 0xf6, 0x3a, 0x26, 0x5c, 0xa0, 0x39,
-	0x38, 0xe1, 0x61, 0x2e, 0xda, 0x71, 0xe8, 0x62, 0x41, 0x5c, 0xc9, 0x72, 0xd4, 0xaa, 0x24, 0x67,
-	0xfb, 0xea, 0x48, 0xff, 0x04, 0xe0, 0x6c, 0xff, 0x36, 0x43, 0xeb, 0xbe, 0x59, 0xa0, 0xfb, 0x7c,
-	0xb1, 0xee, 0x79, 0x29, 0xb3, 0xb2, 0x7f, 0x03, 0xb0, 0xd6, 0x22, 0x62, 0x87, 0x39, 0xff, 0x49,
-	0xf5, 0x06, 0xac, 0x1c, 0x31, 0xbb, 0x1d, 0x30, 0x97, 0x5c, 0x09, 0x3f, 0x7e, 0xc4, 0xec, 0xe7,
-	0xcc, 0x25, 0xdb, 0x6e, 0xce, 0x95, 0xd1, 0xbc, 0x2b, 0x9b, 0xb0, 0x51, 0x40, 0x7d, 0x48, 0x53,
-	0x3e, 0x02, 0xe9, 0x6d, 0x71, 0x97, 0xa1, 0x3d, 0xd9, 0x28, 0xf0, 0xa4, 0x99, 0xf1, 0xa4, 0x9f,
-	0xce, 0x59, 0x4b, 0x1e, 0xc3, 0xdb, 0xbb, 0xb1, 0xed, 0x51, 0x7e, 0x28, 0x13, 0xbb, 0xb3, 0x5c,
-	0x13, 0x0a, 0x5c, 0x13, 0x4a, 0x7f, 0x05, 0xef, 0xe4, 0xcb, 0x86, 0x26, 0x3f, 0xe0, 0x02, 0x98,
-	0x10, 0x59, 0xe4, 0x84, 0x1d, 0x93, 0x1c, 0xa5, 0x6c, 0x01, 0xc8, 0x15, 0xac, 0x7d, 0x2d, 0xc3,
-	0x09, 0x75, 0xe5, 0x49, 0x74, 0x42, 0x1d, 0x82, 0x3e, 0x00, 0x38, 0xdd, 0xf7, 0xd5, 0x41, 0x93,
-	0x86, 0x7a, 0x34, 0xaf, 0x56, 0xeb, 0x69, 0xf2, 0x68, 0x6a, 0xcb, 0x03, 0xdf, 0x91, 0xac, 0x49,
-	0xfa, 0xfd, 0x77, 0x3f, 0x7f, 0x9f, 0x8f, 0x2c, 0xa0, 0xa6, 0xe9, 0xe0, 0x28, 0xa2, 0x24, 0x32,
-	0x4f, 0x1e, 0xaa, 0xff, 0x16, 0x66, 0x47, 0x56, 0x66, 0xf1, 0x3e, 0x03, 0x58, 0xed, 0x77, 0x15,
-	0xd1, 0xe2, 0xa0, 0x4b, 0x94, 0x59, 0x2f, 0x6d, 0xe9, 0xef, 0x89, 0x29, 0xb9, 0x15, 0x49, 0x6e,
-	0x1e, 0xe9, 0xfd, 0xc8, 0x65, 0xe0, 0xdf, 0x03, 0x38, 0xd5, 0x67, 0x23, 0xfb, 0xea, 0xb4, 0x38,
-	0x60, 0xc7, 0x72, 0x44, 0x96, 0x25, 0x91, 0x26, 0x9a, 0xeb, 0x25, 0xe2, 0x25, 0x75, 0x19, 0x2c,
-	0x06, 0x27, 0xb2, 0x0b, 0x85, 0x6a, 0x5d, 0x8c, 0x82, 0xed, 0xd4, 0xea, 0xc5, 0xc1, 0x14, 0x75,
-	0x5e, 0xa2, 0x36, 0xf4, 0xe9, 0x5e, 0xd4, 0x50, 0xe5, 0xaf, 0x83, 0x15, 0xe4, 0xc1, 0x4a, 0x66,
-	0xc9, 0x90, 0xd6, 0x6d, 0xd9, 0xbb, 0x79, 0x5a, 0x3d, 0xff, 0x0e, 0xed, 0x51, 0x3f, 0xf4, 0xc8,
-	0x25, 0x5c, 0x53, 0xc2, 0xcd, 0xe8, 0xd5, 0x5e, 0xb8, 0x48, 0xf6, 0x5a, 0x07, 0x2b, 0x1b, 0x4f,
-	0xbe, 0x5f, 0x34, 0xc0, 0x8f, 0x8b, 0x06, 0xf8, 0x75, 0xd1, 0x00, 0x2f, 0x97, 0x3b, 0x54, 0x1c,
-	0xc6, 0xb6, 0xe1, 0x30, 0xdf, 0xb4, 0x18, 0x27, 0x42, 0xe0, 0x67, 0x1e, 0x3b, 0x35, 0x37, 0x55,
-	0x83, 0xd5, 0x16, 0x33, 0xd3, 0x1f, 0x04, 0xf6, 0x98, 0x84, 0x7d, 0xf4, 0x27, 0x00, 0x00, 0xff,
-	0xff, 0xed, 0x19, 0x91, 0x65, 0x93, 0x08, 0x00, 0x00,
+	// 765 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xc4, 0x56, 0x4f, 0x4f, 0xd4, 0x40,
+	0x14, 0xcf, 0xb0, 0x2c, 0xb2, 0xb3, 0x1c, 0xcc, 0xa8, 0xb0, 0x74, 0x97, 0x15, 0xba, 0x10, 0xfe,
+	0x18, 0x5a, 0xc5, 0x18, 0x13, 0x8e, 0x80, 0x6e, 0x48, 0x88, 0x92, 0x12, 0x2e, 0x7a, 0x58, 0xa7,
+	0xed, 0x50, 0x06, 0xda, 0x4e, 0xed, 0x4c, 0x21, 0x70, 0x32, 0x26, 0x9e, 0x3c, 0x18, 0xc3, 0x49,
+	0x2f, 0x7e, 0x0e, 0xbf, 0x81, 0x47, 0x13, 0xbf, 0x80, 0x21, 0x7e, 0x10, 0xd3, 0x69, 0x17, 0x5a,
+	0xb6, 0xbb, 0x86, 0xc4, 0xe8, 0x6d, 0xe7, 0xfd, 0x99, 0xdf, 0xef, 0xbd, 0xdf, 0x9b, 0xb7, 0x85,
+	0x75, 0x97, 0x9a, 0x3a, 0x0e, 0xa8, 0x1e, 0xb0, 0x63, 0x12, 0x76, 0xc2, 0xc0, 0xea, 0xe0, 0x80,
+	0x6a, 0x41, 0xc8, 0x04, 0x43, 0x23, 0x61, 0x60, 0xe1, 0x80, 0x2a, 0x77, 0xe2, 0x20, 0x8b, 0x79,
+	0x1e, 0xf3, 0x75, 0x13, 0x73, 0x92, 0xb8, 0x73, 0x66, 0x1b, 0x0b, 0x9c, 0x9a, 0x1b, 0xb1, 0x59,
+	0x9c, 0x04, 0x84, 0xeb, 0x21, 0xe1, 0x2c, 0x0a, 0x2d, 0x92, 0xf1, 0x2a, 0x5d, 0x40, 0x81, 0xf9,
+	0x61, 0x1e, 0x4f, 0x69, 0x38, 0x8c, 0x39, 0x2e, 0x91, 0x6e, 0xec, 0xfb, 0x4c, 0x60, 0x41, 0x99,
+	0xcf, 0x53, 0x6f, 0x3d, 0xf5, 0xca, 0x93, 0x19, 0xed, 0xe9, 0xc4, 0x0b, 0xc4, 0x49, 0xe2, 0x54,
+	0xdf, 0x00, 0x38, 0xd5, 0x26, 0xa2, 0xed, 0x32, 0x13, 0xbb, 0xdb, 0x71, 0x2d, 0x3b, 0x91, 0xe7,
+	0xe1, 0xf0, 0xc4, 0x20, 0x3c, 0x60, 0x3e, 0x27, 0xe8, 0x3e, 0x2c, 0xb3, 0x63, 0x9f, 0x84, 0x35,
+	0x30, 0x0d, 0x16, 0xaa, 0x2b, 0x8a, 0x76, 0x81, 0x6b, 0x46, 0x7b, 0xda, 0xf3, 0xd0, 0xc1, 0x3e,
+	0x3d, 0x95, 0x80, 0x46, 0x12, 0x88, 0x96, 0x61, 0x59, 0x76, 0xa5, 0x36, 0x24, 0x33, 0x26, 0x34,
+	0x59, 0x94, 0x26, 0x6f, 0xdf, 0xe5, 0xd8, 0x21, 0x1b, 0x44, 0x60, 0xea, 0x1a, 0x49, 0x94, 0x7a,
+	0x06, 0xe0, 0x4c, 0x21, 0x85, 0x2d, 0xca, 0xc5, 0x05, 0x8d, 0x71, 0x38, 0xc2, 0x05, 0x16, 0x11,
+	0x97, 0x3c, 0xca, 0x46, 0x7a, 0x42, 0x37, 0x61, 0xc9, 0xe3, 0x8e, 0x84, 0xaa, 0x18, 0xf1, 0x4f,
+	0xb4, 0x01, 0x61, 0x22, 0x8a, 0x4b, 0xb9, 0xa8, 0x95, 0xa6, 0x4b, 0x0b, 0xd5, 0x95, 0x39, 0x2d,
+	0x91, 0x44, 0x1b, 0x58, 0xab, 0x51, 0x91, 0x89, 0x31, 0xae, 0xfa, 0x19, 0xc0, 0x46, 0x3e, 0x38,
+	0x65, 0xfd, 0xaf, 0xfa, 0x82, 0x26, 0xe1, 0x68, 0x52, 0x07, 0xb5, 0x6b, 0x25, 0x59, 0xde, 0x0d,
+	0x79, 0xde, 0xb4, 0x55, 0x0c, 0xef, 0x16, 0x71, 0x4b, 0x1a, 0xf6, 0x3a, 0x22, 0x5c, 0xa0, 0x19,
+	0x38, 0xe6, 0x62, 0x2e, 0x3a, 0x51, 0x60, 0x63, 0x41, 0x6c, 0xc9, 0x72, 0xd8, 0xa8, 0xc6, 0xb6,
+	0xdd, 0xc4, 0x84, 0xea, 0xb0, 0x12, 0x60, 0x87, 0x74, 0x38, 0x3d, 0x25, 0x92, 0xd3, 0xb0, 0x31,
+	0x1a, 0x1b, 0x76, 0xe8, 0x29, 0x51, 0x3f, 0x02, 0x38, 0xdd, 0x1f, 0xe3, 0xda, 0xa2, 0xac, 0x17,
+	0x88, 0x32, 0x5b, 0x2c, 0x4a, 0xbe, 0xcf, 0x59, 0x4d, 0xbe, 0x02, 0x58, 0x6f, 0x13, 0xb1, 0xc5,
+	0xac, 0xff, 0x24, 0x49, 0x13, 0x56, 0x0f, 0x98, 0xd9, 0xf1, 0x99, 0x4d, 0x2e, 0x55, 0xa9, 0x1c,
+	0x30, 0xf3, 0x19, 0xb3, 0xc9, 0xa6, 0x9d, 0x93, 0x6c, 0x38, 0x2f, 0xd9, 0x2b, 0xd8, 0x2c, 0xa0,
+	0xfe, 0x37, 0x15, 0xfb, 0x00, 0xe4, 0x54, 0x14, 0x43, 0x5c, 0x5b, 0xb0, 0xb5, 0x02, 0xc1, 0x5a,
+	0x19, 0xc1, 0xfa, 0x89, 0x90, 0xd5, 0xeb, 0x11, 0xbc, 0xb5, 0x1d, 0x99, 0x2e, 0xe5, 0xfb, 0x32,
+	0xb0, 0x5b, 0xe8, 0x95, 0x2e, 0x82, 0x2b, 0x5d, 0x54, 0x5f, 0xc2, 0xdb, 0xf9, 0xb4, 0x6b, 0x93,
+	0x1f, 0xf0, 0x74, 0x74, 0x88, 0x0c, 0x72, 0xc4, 0x0e, 0x49, 0x8e, 0x52, 0x36, 0x01, 0xe4, 0x12,
+	0x56, 0xbe, 0x94, 0xe1, 0x58, 0xb2, 0x2c, 0x48, 0x78, 0x44, 0x2d, 0x82, 0xde, 0x03, 0x38, 0xd9,
+	0x77, 0x5f, 0xa1, 0x71, 0x2d, 0x59, 0xb7, 0x97, 0x73, 0xf7, 0x24, 0x5e, 0xb7, 0xca, 0xe2, 0xc0,
+	0x0d, 0x94, 0x15, 0x49, 0xbd, 0xf7, 0xf6, 0xc7, 0xaf, 0xb3, 0xa1, 0x39, 0xd4, 0xd2, 0x2d, 0x1c,
+	0x86, 0x94, 0x84, 0xfa, 0xd1, 0x83, 0xe4, 0x7f, 0x46, 0x77, 0x64, 0x66, 0x16, 0xef, 0x13, 0x80,
+	0xb5, 0x7e, 0xef, 0x14, 0xcd, 0x0f, 0x7a, 0x61, 0x99, 0xd9, 0x53, 0x16, 0xfe, 0x1c, 0x98, 0x92,
+	0x5b, 0x92, 0xe4, 0x66, 0x91, 0xda, 0x8f, 0x5c, 0x06, 0xfe, 0x1d, 0x80, 0x13, 0x7d, 0x26, 0xb2,
+	0x6f, 0x9f, 0xe6, 0x07, 0xcc, 0x58, 0x8e, 0xc8, 0xa2, 0x24, 0xd2, 0x42, 0x33, 0xbd, 0x44, 0xdc,
+	0x38, 0x2f, 0x83, 0xc5, 0xe0, 0x58, 0x76, 0xa0, 0x50, 0xbd, 0x8b, 0x51, 0x30, 0x9d, 0x4a, 0xa3,
+	0xd8, 0x99, 0xa2, 0xce, 0x4a, 0xd4, 0xa6, 0x3a, 0xd9, 0x8b, 0x1a, 0x24, 0xf1, 0xab, 0x60, 0x09,
+	0xb9, 0xb0, 0x9a, 0x19, 0x32, 0xa4, 0x74, 0xaf, 0xec, 0x9d, 0x3c, 0xa5, 0x91, 0x5f, 0x52, 0x3b,
+	0xd4, 0x0b, 0x5c, 0x72, 0x01, 0xd7, 0x92, 0x70, 0x53, 0x6a, 0xad, 0x17, 0x2e, 0x94, 0x77, 0xad,
+	0x82, 0xa5, 0xb5, 0xc7, 0xdf, 0xce, 0x9b, 0xe0, 0xfb, 0x79, 0x13, 0xfc, 0x3c, 0x6f, 0x82, 0x17,
+	0x8b, 0x0e, 0x15, 0xfb, 0x91, 0xa9, 0x59, 0xcc, 0xd3, 0x0d, 0xc6, 0x89, 0x10, 0xf8, 0xa9, 0xcb,
+	0x8e, 0xf5, 0xf5, 0xe4, 0x82, 0xe5, 0x36, 0xd3, 0xd3, 0x4f, 0x09, 0x73, 0x44, 0xc2, 0x3e, 0xfc,
+	0x1d, 0x00, 0x00, 0xff, 0xff, 0xc6, 0x6c, 0xbd, 0x2e, 0xcd, 0x08, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -1155,6 +1172,11 @@ func (m *GetGlobalPowerDetailListRequest) MarshalToSizedBuffer(dAtA []byte) (int
 		i -= len(m.XXX_unrecognized)
 		copy(dAtA[i:], m.XXX_unrecognized)
 	}
+	if m.PageSize != 0 {
+		i = encodeVarintPowerRpcApi(dAtA, i, uint64(m.PageSize))
+		i--
+		dAtA[i] = 0x10
+	}
 	if m.LastUpdated != 0 {
 		i = encodeVarintPowerRpcApi(dAtA, i, uint64(m.LastUpdated))
 		i--
@@ -1304,6 +1326,11 @@ func (m *GetLocalPowerDetailListRequest) MarshalToSizedBuffer(dAtA []byte) (int,
 	if m.XXX_unrecognized != nil {
 		i -= len(m.XXX_unrecognized)
 		copy(dAtA[i:], m.XXX_unrecognized)
+	}
+	if m.PageSize != 0 {
+		i = encodeVarintPowerRpcApi(dAtA, i, uint64(m.PageSize))
+		i--
+		dAtA[i] = 0x10
 	}
 	if m.LastUpdated != 0 {
 		i = encodeVarintPowerRpcApi(dAtA, i, uint64(m.LastUpdated))
@@ -1569,6 +1596,9 @@ func (m *GetGlobalPowerDetailListRequest) Size() (n int) {
 	if m.LastUpdated != 0 {
 		n += 1 + sovPowerRpcApi(uint64(m.LastUpdated))
 	}
+	if m.PageSize != 0 {
+		n += 1 + sovPowerRpcApi(uint64(m.PageSize))
+	}
 	if m.XXX_unrecognized != nil {
 		n += len(m.XXX_unrecognized)
 	}
@@ -1636,6 +1666,9 @@ func (m *GetLocalPowerDetailListRequest) Size() (n int) {
 	_ = l
 	if m.LastUpdated != 0 {
 		n += 1 + sovPowerRpcApi(uint64(m.LastUpdated))
+	}
+	if m.PageSize != 0 {
+		n += 1 + sovPowerRpcApi(uint64(m.PageSize))
 	}
 	if m.XXX_unrecognized != nil {
 		n += len(m.XXX_unrecognized)
@@ -2191,6 +2224,25 @@ func (m *GetGlobalPowerDetailListRequest) Unmarshal(dAtA []byte) error {
 					break
 				}
 			}
+		case 2:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field PageSize", wireType)
+			}
+			m.PageSize = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowPowerRpcApi
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.PageSize |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
 		default:
 			iNdEx = preIndex
 			skippy, err := skipPowerRpcApi(dAtA[iNdEx:])
@@ -2580,6 +2632,25 @@ func (m *GetLocalPowerDetailListRequest) Unmarshal(dAtA []byte) error {
 				b := dAtA[iNdEx]
 				iNdEx++
 				m.LastUpdated |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		case 2:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field PageSize", wireType)
+			}
+			m.PageSize = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowPowerRpcApi
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.PageSize |= uint64(b&0x7F) << shift
 				if b < 0x80 {
 					break
 				}
